--- a/index.html
+++ b/index.html
@@ -13,15 +13,11 @@
 </head>
 
 <body>
-    <header>
-        <div class="container-fluid">
+    <header class="position-relative">
+        <div class="container-fluid ">
             <div class="row justify-content-between">
-                <div class="col-md-auto title">
-                    7-й конкурс </br>региональных </br>театральных </br>коллективов</br>
-                    <p style="color:#FFCB08;">«Полюс. Золотой </br>сезон» 2022</p>
-                </div>
-                <div class="col-md-auto">
-                    <div class="row justify-content-evenly">
+                <div class="col-md-12 col-lg-6 col-sm-12 order-sm-first order-md-first order-lg-last">
+                    <div class="row justify-content-between">
                         <div class="col-md-auto bar">
                             <img src="img/logo white ru.svg" class="rounded img-fluid" alt="...">
                         </div>
@@ -35,31 +31,56 @@
 
                 </div>
 
+                <div class="col-md-auto title order-sm-last order-md-last order-lg-first">
+                    7-й конкурс </br>региональных </br>театральных </br>коллективов</br>
+                    <p style="color:#FFCB08;">«Полюс. Золотой </br>сезон» 2022</p>
+                </div>
+
+
             </div>
             <div class="row align-items-end justify-content-between">
-                <div class="inf">
-                    Компания «Полюс» приглашает театры, творческие объединения и любительские труппы Красноярского края, Якутии, Иркутской и Магаданской областей принять участие в седьмом конкурсе региональных театральных коллективов «Полюс. Золотой сезон»
+                <div class="inf d-sm-none d-none d-md-block">
+                    <b>Компания «Полюс»</b> приглашает театры, творческие объединения и любительские труппы Красноярского края, Якутии, Иркутской и Магаданской областей принять участие в седьмом конкурсе региональных театральных коллективов «Полюс. Золотой
+                    сезон»
                 </div>
                 <div class="col-md-auto align-self-end date">
-                    Период приема заявок:
+                    <b>Период приема заявок:</b>
                     <div class="col-sm-auto date-2 ">
                         19 января’22 – 10 марта’22
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="position-absolute bottom-0 end-0 fond">
-            <img src="img/DSC02700 2.svg" class="rounded img-fluid" alt="...">
+
+        </div>
+        <div class="position-absolute bottom-0 end-0">
+            <img src="img/DSC02700 2.svg" class="fond" alt="...">
         </div>
     </header>
 
     <div class="container-fluid content overflow-hidden">
+        <div class="inf-2 d-sm-block d-md-none">
+            <b>Компания «Полюс»</b> приглашает театры, творческие объединения и любительские труппы Красноярского края, Якутии, Иркутской и Магаданской областей принять участие в седьмом конкурсе региональных театральных коллективов «Полюс. Золотой сезон»
+        </div>
+        <div class="col-auto d-sm-block d-md-none" style="padding-bottom: 45px;">
+            <div class="text-34">
+                даты проведения
+            </div>
+            <div class="text-37">
+                02–08 июня 2022
+            </div>
+            <div class="text-34">
+                Место проведения
+            </div>
+            <div class="text-37">
+                г. Якутск
+            </div>
+        </div>
         <div class="title">
             <p style="color:#383937;">Грантовый фонд</p>
         </div>
         <div class="row gx-5 row1">
-            <div class="col-auto">
+            <div class="col-auto d-sm-none d-none d-md-block">
                 <div class="text-34">
                     даты проведения
                 </div>
@@ -84,7 +105,7 @@
             </div>
         </div>
         <div class="row gx-5">
-            <div class="col-md-auto">
+            <div class="col-md-auto d-sm-none d-none d-md-block">
                 <div class="text-34">
                     Место проведения
                 </div>
@@ -125,26 +146,31 @@
     </div>
 
     <div class="container-fluid cont-3">
-        <div class="clearfix">
-            <img src="img/IMG_2280 5.jpg" class="col-md-5 float-md-end mb-3 ms-md-3 rounded img-fluid img-3" alt="...">
-            <div class="title">
-                <font color="#383937">СПЕЦИАЛЬНЫЙ </br> ПРИЗ </font>
+        <div class="row gx-2">
+            <div class="col-md-6 col-lg-6 order-sm-first order-md-last order-lg-last i">
+                <img src="img/IMG_2280 5.jpg" class="rounded img-fluid img-3" alt="...">
+            </div>
+            <div class="col-md-6 col-lg-6 order-sm-last order-md-first order-lg-first">
+                <div class="title">
+                    <font color="#383937">СПЕЦИАЛЬНЫЙ </br> ПРИЗ </font>
+                    </br>
+                </div>
                 </br>
+                <p class="text-37" style="color:#FFCB08">
+                    Отдельная номинация для Народных театров и непрофессиональных коллективов
+                </p>
+                <div class="text-25">
+                    Победитель в этой категории получает возможность направить на фестиваль в Якутск своих представителей для участия в образовательной программе, общения с коллегами из ведущих региональных и столичных театров, а также вдохновения на новые проекты.
+                </div>
+                <div class="text-34-1">
+                    <b>Цель конкурса</b>
+                </div>
+                <div class="text-25">
+                    Cодействие развитию социальной среды в регионах присутствия «Полюса» за счет поддержки национальной театральной школы, сохранение и распространение посредством театрального искусства общечеловеческих ценностей.
+                </div>
             </div>
-            </br>
-            <p class="text-37" style="color:#FFCB08">
-                Отдельная номинация для Народных театров и непрофессиональных коллективов
-            </p>
-            </br>
-            <div class="text-25">
-                Победитель в этой категории получает возможность направить на фестиваль в Якутск своих представителей для участия в образовательной программе, общения с коллегами из ведущих региональных и столичных театров, а также вдохновения на новые проекты.
-            </div>
-            <div class="text-34-1">
-                Цель конкурса
-            </div>
-            <div class="text-25">
-                Cодействие развитию социальной среды в регионах присутствия «Полюса» за счет поддержки национальной театральной школы, сохранение и распространение посредством театрального искусства общечеловеческих ценностей.
-            </div>
+
+
         </div>
     </div>
     <div style="background-color: #FFCB08;">
@@ -164,7 +190,7 @@
                             polyus-konkurs@yandex.ru
                         </div>
                     </div>
-                    <div class="row align-items-end">
+                    <div class="row align-items-end d-sm-none d-none d-md-block">
                         <div class="text-25">
                             Конкурсные пакеты участников принимаются</br>
                             <font color="#FFFFFF">до 10 марта 2022 года </font>
@@ -205,11 +231,30 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-lg-6 col-md-6 text-37 d-sm-block d-md-none">
+                <a href="pdf/Анкета-заявка_2022.docx" class="col-md-auto bt-white">
+                    Скачать форму
+                </a>
+                <p style="font-size: 10px;">Подробнее об условиях участия и призах</br> читайте в <a href="pdf/Положение о конкурсе_2022.docx" style="color: #ffffff
+                ;">Положении о конкурсе</a></p>
+            </div>
+
             <div class="row gx-5 sub-cont-2">
+                <div class="d-sm-block d-md-none">
+                    <div class="text-25">
+                        Конкурсные пакеты участников принимаются</br>
+                        <font color="#FFFFFF">до 10 марта 2022 года </font>
+                    </div>
+                    <div class="text-25">
+                        Объявление победителей состоится </br>
+                        <font color="#FFFFFF">10 апреля 2022 года </font>
+                    </div>
+                </div>
                 <div class="col-lg-6 col-md-6 text-37">
                     Желаем творческих успехов</br> и благодарных зрителей!
                 </div>
-                <div class="col-lg-6 col-md-6 text-37">
+                <div class="col-lg-6 col-md-6 text-37 d-sm-none d-none d-md-block">
                     <a href="pdf/Анкета-заявка_2022.docx" class="col-md-auto bt-white">
                         Скачать форму оформления конкурсного пакета
                     </a>
