--- a/index.html
+++ b/index.html
@@ -45,11 +45,14 @@
                     <b>Компания «Полюс»</b> приглашает театры, творческие объединения и любительские труппы Красноярского края, Якутии, Иркутской и Магаданской областей принять участие в седьмом конкурсе региональных театральных коллективов «Полюс. Золотой
                     сезон»
                 </div>
-                <div class="col-md-auto align-self-end date">
+                <div class="col-md-7 col-lg-6 align-self-end date">
                     <b>Период приема заявок:</b>
-                    <div class="col-sm-auto date-2 ">
-                        19 января’22 – 10 марта’22
+                    <div class="row">
+                        <div class="col-sm-auto date-2 ">
+                            19 января’22 – 10 марта’22
+                        </div>
                     </div>
+
                 </div>
             </div>
 
@@ -115,7 +118,7 @@
                     г. Якутск
                 </div>
             </div>
-            <div class="col-md-auto text-37">
+            <div class="col-md-auto align-self-end text-37 d-1">
                 <div class="date-2">
                     Грантовый фонд – 6 000 000 ₽
                 </div>
@@ -135,7 +138,7 @@
             <div class="col-lg-6 col-md-6 text-37-1">
                 Впервые фестиваль будет проходить в столице самобытной и ни на кого не похожей Республики Саха
             </div>
-            <div class="col-lg-6 col-md-6 text-25">
+            <div class="col-lg-6 col-md-6 d-2 text-25 ">
                 <p>Якутск для проведения фестиваля выбран не случайно. В 2022 году исполняется 100-лет с момента образования Якутской АССР.</p>
                 </br>
                 <p>Поэтому жителей и гостей города ждет богатая культурная программа: спектакли столичных театров и победителей 7-го конкурса региональных театральных коллективов «Полюс. Золотой сезон». На сцене представят лучшие постановки ведущих московских,
@@ -149,8 +152,8 @@
 
     <div class="container-fluid cont-3">
         <div class="row gx-2">
-            <div class="col-md-6 col-lg-6 order-sm-first order-md-last order-lg-last i">
-                <img src="img/IMG_2280 5.jpg" class="rounded img-fluid img-3" alt="...">
+            <div class="col-md-6 col-lg-6 order-sm-first order-md-last order-lg-last i align-self-end">
+                <img src="img/IMG_2280 5.jpg" class="img-3" alt="...">
             </div>
             <div class="col-md-6 col-lg-6 order-sm-last order-md-first order-lg-first">
                 <div class="title">
@@ -192,15 +195,18 @@
                             polyus-konkurs@yandex.ru
                         </div>
                     </div>
-                    <div class="row align-items-end d-sm-none d-none d-md-block">
-                        <div class="text-25">
-                            Конкурсные пакеты участников принимаются</br>
-                            <font color="#FFFFFF">до 10 марта 2022 года </font>
+                    <div class="row d-sm-none d-none d-md-block align-items-end">
+                        <div class="col align-self-end">
+                            <div class="text-25">
+                                Конкурсные пакеты участников принимаются</br>
+                                <font color="#FFFFFF">до 10 марта 2022 года </font>
+                            </div>
+                            <div class="text-25">
+                                Объявление победителей состоится </br>
+                                <font color="#FFFFFF">10 апреля 2022 года </font>
+                            </div>
                         </div>
-                        <div class="text-25">
-                            Объявление победителей состоится </br>
-                            <font color="#FFFFFF">10 апреля 2022 года </font>
-                        </div>
+
                     </div>
                     </br>
                 </div>
@@ -213,20 +219,20 @@
                         <ul class="list-group list-group-flush" style="padding-left: 0%;">
                             <li class="list-group-item d-flex">
                                 <div class="number">
-                                    0.1
+                                    01.
                                 </div>Заполненная анкета-заявка участника с описанием социальной миссии / заполняется по форме
 
                             </li>
                             <li class="list-group-item d-flex">
 
                                 <div class="number">
-                                    0.2
+                                    02.
                                 </div> Видеозапись драматического спектакля для взрослой аудитории / передача видео через облачные ресурсы со сроком хранения файла до полугода, объем видеофайла не более 5 ГБ
 
                             </li>
                             <li class="list-group-item d-flex">
                                 <div class="number">
-                                    0.3
+                                    03.
                                 </div> Предварительная смета с техническим райдером на конкурсный спектакль / свободная форма
                             </li>
                         </ul>
@@ -253,14 +259,21 @@
                         <font color="#FFFFFF">10 апреля 2022 года </font>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 text-37">
+                <div class="col-lg-6 col-md-6 text-37 align-self-end">
                     Желаем творческих успехов</br> и благодарных зрителей!
                 </div>
-                <div class="col-lg-6 col-md-6 text-37 d-sm-none d-none d-md-block">
+                <div class="col-lg-6 col-md-6 text-37 d-sm-none d-none d-lg-block align-self-end">
                     <a href="pdf/Анкета-заявка_2022.docx" class="col-md-auto bt-white">
                         Скачать форму оформления конкурсного пакета
                     </a>
-                    <p style="font-size: 18px;">Подробнее об условиях участия и призах читайте в <a href="pdf/Положение о конкурсе_2022.docx" style="color: #ffffff
+                    <p class="down">Подробнее об условиях участия и призах читайте в <a href="pdf/Положение о конкурсе_2022.docx" style="color: #ffffff
+                    ;">Положении о конкурсе</a></p>
+                </div>
+                <div class="col-lg-6 col-md-6 text-37 d-sm-none d-none d-md-block align-self-end">
+                    <a href="pdf/Анкета-заявка_2022.docx" class="col-md-auto bt-white">
+                        Скачать форму
+                    </a>
+                    <p class="down">Подробнее об условиях участия и призах</br> читайте в <a href="pdf/Положение о конкурсе_2022.docx" style="color: #ffffff
                     ;">Положении о конкурсе</a></p>
                 </div>
             </div>
@@ -270,12 +283,12 @@
 
     <footer>
         <div class="container-fluid">
-            <div class="row align-items-center">
-                <div class="col-md-4 col-lg-3 col-sm-12 img-log">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md-8 col-lg-3 col-sm-12 img-log">
                     <img src="img/logo white ru.svg" class="rounded img-fluid" alt="...">
                 </div>
                 <div class="col-md-9 col-sm-12">
-                    <div class="row gx-2 justify-content-between">
+                    <div class="row justify-content-between">
                         <div class="col-auto">
                             <span>Оператор и пресс-офис конкурса</span> </br>+7 495 258-20-45 (доб. 46)
                         </div>
@@ -288,10 +301,10 @@
                         <div class="col-auto align-self-center">
                             <div class="row ">
                                 <div class="col-auto align-self-center">
-                                    <img src="img/vk.svg" class="rounded img-fluid" alt="...">
+                                    <img src="img/vk.svg" class="rounded img-fluid img-vk" alt="...">
                                 </div>
                                 <div class="col-auto">
-                                    <img src="img/f.svg" class="rounded img-fluid" alt="...">
+                                    <img src="img/f.svg" class="rounded img-fluid img-fb" alt="...">
                                 </div>
                             </div>
 
