--- a/index.html
+++ b/index.html
@@ -262,14 +262,14 @@
                 <div class="col-lg-6 col-md-6 text-37 align-self-end">
                     Желаем творческих успехов</br> и благодарных зрителей!
                 </div>
-                <div class="col-lg-6 col-md-6 text-37 d-sm-none d-none d-lg-block align-self-end">
+                <div class="col-lg-6 col-md-6 text-37 d-sm-none d-md-none d-none d-lg-block align-self-end">
                     <a href="pdf/Анкета-заявка_2022.docx" class="col-md-auto bt-white">
                         Скачать форму оформления конкурсного пакета
                     </a>
                     <p class="down">Подробнее об условиях участия и призах читайте в <a href="pdf/Положение о конкурсе_2022.docx" style="color: #ffffff
                     ;">Положении о конкурсе</a></p>
                 </div>
-                <div class="col-lg-6 col-md-6 text-37 d-sm-none d-none d-md-block align-self-end">
+                <div class="col-lg-6 col-md-6 text-37 d-sm-none d-none d-md-block d-lg-none align-self-end">
                     <a href="pdf/Анкета-заявка_2022.docx" class="col-md-auto bt-white">
                         Скачать форму
                     </a>
