--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                     сезон»
                 </div>
                 <div class="col-md-7 col-lg-6 align-self-end date">
-                    <b>Период приема заявок:</b>
+                    Период приема заявок:
                     <div class="row">
-                        <div class="col-sm-auto date-2 ">
+                        <div class="col-auto date-2 ">
                             19 января’22 – 10 марта’22
                         </div>
                     </div>
@@ -92,6 +92,14 @@
                 <div class="text-37">
                     02–08 июня 2022
                 </div>
+                <div class="d-sm-none d-none d-md-block d-lg-none cont-5">
+                    <div class="text-34">
+                        Место проведения
+                    </div>
+                    <div class="text-37">
+                        г. Якутск
+                    </div>
+                </div>
             </div>
             <div class="col text-25">
                 <ul class="list-group">
@@ -100,7 +108,7 @@
                             <img src="img/icon-list.svg"alt="..." >
                         </span>Лучшие постановки будут представлены на сцене фестиваля-школы «Территория. Якутск».
                     </li>
-                    <li class="list-group-item d-flex">
+                    <li class="list-group-item d-flex cont-6">
                         <span class="badge">
                             <img src="img/icon-list.svg"alt="..." >
                         </span>
@@ -110,7 +118,7 @@
             </div>
         </div>
         <div class="row gx-5">
-            <div class="col-md-auto d-sm-none d-none d-md-block">
+            <div class="col-md-auto d-sm-none d-none d-md-none d-lg-block">
                 <div class="text-34">
                     Место проведения
                 </div>
@@ -118,7 +126,7 @@
                     г. Якутск
                 </div>
             </div>
-            <div class="col-md-auto align-self-end text-37 d-1">
+            <div class="col-auto align-self-end text-37 offset-md-4 offset-lg-0 d-1">
                 <div class="date-2">
                     Грантовый фонд – 6 000 000 ₽
                 </div>
@@ -138,7 +146,7 @@
             <div class="col-lg-6 col-md-6 text-37-1">
                 Впервые фестиваль будет проходить в столице самобытной и ни на кого не похожей Республики Саха
             </div>
-            <div class="col-lg-6 col-md-6 d-2 text-25 ">
+            <div class="col-lg-6 col-md-6 d-2 text-25 cont-7">
                 <p>Якутск для проведения фестиваля выбран не случайно. В 2022 году исполняется 100-лет с момента образования Якутской АССР.</p>
                 </br>
                 <p>Поэтому жителей и гостей города ждет богатая культурная программа: спектакли столичных театров и победителей 7-го конкурса региональных театральных коллективов «Полюс. Золотой сезон». На сцене представят лучшие постановки ведущих московских,
@@ -195,7 +203,7 @@
                             polyus-konkurs@yandex.ru
                         </div>
                     </div>
-                    <div class="row d-sm-none d-none d-md-block align-items-end">
+                    <div class="row d-sm-none d-none d-md-block align-items-end space-1">
                         <div class="col align-self-end">
                             <div class="text-25">
                                 Конкурсные пакеты участников принимаются</br>
@@ -214,8 +222,12 @@
                     <div class="row text-26">
                         В конкурсный пакет входят следующие материалы:
                     </div>
-                    </br>
-                    <div class="col-auto text-25" style="padding-left: 0%;">
+                    <div class="row d-sm-none d-none d-md-block">
+                        </br>
+                        </br>
+                    </div>
+
+                    <div class="col-auto text-25 cont-8" style="padding-left: 0%;">
                         <ul class="list-group list-group-flush" style="padding-left: 0%;">
                             <li class="list-group-item d-flex">
                                 <div class="number">
@@ -244,12 +256,12 @@
                 <a href="pdf/Анкета-заявка_2022.docx" class="col-md-auto bt-white">
                     Скачать форму
                 </a>
-                <p style="font-size: 10px;">Подробнее об условиях участия и призах</br> читайте в <a href="pdf/Положение о конкурсе_2022.docx" style="color: #ffffff
+                <p style="font-size: 10px; margin-top: 10px;">Подробнее об условиях участия и призах</br> читайте в <a href="pdf/Положение о конкурсе_2022.docx" style="color: #ffffff
                 ;">Положении о конкурсе</a></p>
             </div>
 
             <div class="row gx-5 sub-cont-2">
-                <div class="d-sm-block d-md-none">
+                <div class="d-sm-block d-md-none cont-9">
                     <div class="text-25">
                         Конкурсные пакеты участников принимаются</br>
                         <font color="#FFFFFF">до 10 марта 2022 года </font>
@@ -262,14 +274,14 @@
                 <div class="col-lg-6 col-md-6 text-37 align-self-end">
                     Желаем творческих успехов</br> и благодарных зрителей!
                 </div>
-                <div class="col-lg-6 col-md-6 text-37 d-sm-none d-md-none d-none d-lg-block align-self-end">
+                <div class="col-lg-6 col-md-6 text-37 d-sm-none d-none d-lg-block align-self-end">
                     <a href="pdf/Анкета-заявка_2022.docx" class="col-md-auto bt-white">
                         Скачать форму оформления конкурсного пакета
                     </a>
                     <p class="down">Подробнее об условиях участия и призах читайте в <a href="pdf/Положение о конкурсе_2022.docx" style="color: #ffffff
                     ;">Положении о конкурсе</a></p>
                 </div>
-                <div class="col-lg-6 col-md-6 text-37 d-sm-none d-none d-md-block d-lg-none align-self-end">
+                <div class="col-lg-6 col-md-6 text-37 d-sm-none d-none d-lg-none d-md-block align-self-end">
                     <a href="pdf/Анкета-заявка_2022.docx" class="col-md-auto bt-white">
                         Скачать форму
                     </a>
