--- a/index.html
+++ b/index.html
@@ -313,10 +313,12 @@
                         <div class="col-auto align-self-center">
                             <div class="row ">
                                 <div class="col-auto align-self-center">
-                                    <img src="img/vk.svg" class="rounded img-fluid img-vk" alt="...">
+                                    <a href="https://vk.com/pao_polyus"><img src="img/vk.svg" class="rounded img-fluid img-vk" alt="..."></a>
+
                                 </div>
                                 <div class="col-auto">
-                                    <img src="img/f.svg" class="rounded img-fluid img-fb" alt="...">
+                                    <a href="https://www.facebook.com/PAO.Polyus"><img src="img/f.svg" class="rounded img-fluid img-fb" alt="..."></a>
+
                                 </div>
                             </div>
 
