--- a/index.html
+++ b/index.html
@@ -295,6 +295,14 @@
 
     <footer>
         <div class="container-fluid">
+            <div class="row align-items-center partner">
+                <div class="col-md-12 col-lg-3 col-sm-8 col-8 partner-txt">
+                    Информационные партнёры конкурса:
+                </div>
+                <div class="col-md-9 col-sm-12">
+                    <a href="https://iz.ru/"><img src="img/partner-logo.svg" class="parnter-logo" alt=""></a>
+                </div>
+            </div>
             <div class="row align-items-center justify-content-between">
                 <div class="col-md-8 col-lg-3 col-sm-12 img-log">
                     <img src="img/logo white ru.svg" class="rounded img-fluid" alt="...">
@@ -318,7 +326,6 @@
                                 </div>
                                 <div class="col-auto">
                                     <a href="https://www.facebook.com/PAO.Polyus"><img src="img/f.svg" class="rounded img-fluid img-fb" alt="..."></a>
-
                                 </div>
                             </div>
 
