--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
     <div class="container-fluid cont-3">
         <div class="row gx-2">
-            <div class="col-md-6 col-lg-6 order-sm-first order-md-last order-lg-last i align-self-end">
+            <div class="col-md-6 col-lg-6 order-sm-first order-md-last order-lg-last i">
                 <img src="img/IMG_2280 5.jpg" class="img-3" alt="...">
             </div>
             <div class="col-md-6 col-lg-6 order-sm-last order-md-first order-lg-first">
@@ -205,11 +205,11 @@
                     </div>
                     <div class="row d-sm-none d-none d-md-block align-items-end space-1">
                         <div class="col align-self-end">
-                            <div class="text-25">
+                            <div class="text-25 text-25-1">
                                 Конкурсные пакеты участников принимаются</br>
                                 <font color="#FFFFFF">до 10 марта 2022 года </font>
                             </div>
-                            <div class="text-25">
+                            <div class="text-25 text-25-1">
                                 Объявление победителей состоится </br>
                                 <font color="#FFFFFF">10 апреля 2022 года </font>
                             </div>
@@ -224,10 +224,9 @@
                     </div>
                     <div class="row d-sm-none d-none d-md-block">
                         </br>
-                        </br>
                     </div>
 
-                    <div class="col-auto text-25 cont-8" style="padding-left: 0%;">
+                    <div class="col-auto text-25 text-25-1 cont-8" style="padding-left: 0%;">
                         <ul class="list-group list-group-flush" style="padding-left: 0%;">
                             <li class="list-group-item d-flex">
                                 <div class="number">
@@ -276,7 +275,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6 text-37 d-sm-none d-none d-lg-block align-self-end">
                     <a href="pdf/Анкета-заявка_2022.docx" class="col-md-auto bt-white">
-                        Скачать форму оформления конкурсного пакета
+                        Скачать форму
                     </a>
                     <p class="down">Подробнее об условиях участия и призах читайте в <a href="pdf/Положение о конкурсе_2022.docx" style="color: #ffffff
                     ;">Положении о конкурсе</a></p>
@@ -309,13 +308,13 @@
                 </div>
                 <div class="col-md-9 col-sm-12">
                     <div class="row justify-content-between">
-                        <div class="col-auto">
+                        <div class="col-auto txt-f">
                             <span>Оператор и пресс-офис конкурса</span> </br>+7 495 258-20-45 (доб. 46)
                         </div>
-                        <div class="col-auto">
+                        <div class="col-auto txt-f">
                             <span>Мобильный</span></br> +7 967 130-11-14
                         </div>
-                        <div class="col-auto">
+                        <div class="col-auto txt-f">
                             <span>E-mail</span> </br>polyus-konkurs@yandex.ru
                         </div>
                         <div class="col-auto align-self-center">
