--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <div class="col-md-auto title tittle-m order-sm-last order-md-last order-lg-first">
                     ОБЪЯВЛЕНЫ </br>ПОБЕДИТЕЛИ </br>VII КОНКУРСА
-                    <p style="color:#FFCB08;">«Полюс. Золотой </br>сезон» 2022</p>
+                    <p style="color:#FAB529;">«Полюс. Золотой </br>сезон» 2022</p>
 
                 </div>
             </div>
@@ -52,7 +52,7 @@
 
     <div class="container-fluid d-none d-sm-none d-md-block">
         <div class="row">
-            <div class="col-md-12 col-lg-3 line-yellow order-md-first order-lg-last">
+            <div class="col-md-12 col-lg-4 line-yellow order-md-first order-lg-last">
                 <div class="row">
                     <div class="col-md-6 col-lg-12">
                         <div class="winner-num" style="color: #fff;">
@@ -75,7 +75,7 @@
                 </div>
 
             </div>
-            <div class="col-md-12 col-lg-9 order-md-last order-lg-first">
+            <div class="col-md-12 col-lg-8 order-md-last order-lg-first">
                 <div class="row">
                     <div class="col-4">
                         <div class="winner-num" style="color: #FAB529;">
@@ -248,7 +248,7 @@
     <div class="container-fluid">
         <div class="title-2">
             Поздравляем всех победителей и желаем успешной поездки
-            <div style="color:#FFCB08; padding-left: 0%;">на фестиваль современного искусства «Территория. Якутск»!</div>
+            <div style="color:#FAB529; padding-left: 0%;">на фестиваль современного искусства «Территория. Якутск»!</div>
         </div>
         <div class="row about-win">
             <div class="col-12 col-sm-3">
@@ -270,7 +270,7 @@
                 <ul class="list-group ">
                     <li class="list-group-item d-flex ">
                         <span class="badge arrow ">
-                            &lt;&lt;
+                            «
                         </span>Шесть спектаклей, которые мы выбрали в качестве лауреатов, созданы в Якутии и Красноярском крае. Это два очень насыщенных и разнообразных в плане театральной жизни региона России, так что от очередной
                         встречи (пусть и в видеоварианте) с хорошо знакомыми мне театрами и актерами, я получила огромное удовольствие. Каждый из спектаклей – это неожиданный подход к знакомому сюжету, особый театральный язык, и, в той или иной мере,
                         размышление о жизни и смерти, в которое вовлечены зрители. В якутском ТЮЗе в спектакле «Хроника безумия» Александр Титигиров погружает публику в «темное царство» подсознания убийцы Раскольникова, где установлены огромные весы мироздания
@@ -304,7 +304,7 @@
                 <ul class="list-group ">
                     <li class="list-group-item d-flex ">
                         <span class="badge arrow ">
-                            &lt;&lt;
+                            «
                         </span>Поздравляем победителей Седьмого конкурса региональных театральных коллективов “Полюс. Золотой сезон”. Мы не раз отмечали, что профессиональный уровень театров Сибири и Дальнего Востока нисколько
                         не уступает известным федеральным творческим коллективам. Экспертное жюри вновь сделало невозможное и выбрало лучших из лучших. Победители отправятся на фестиваль “Территория. Якутск”, где в рамках образовательной программы смогут
                         ознакомиться с современными трендами, поделиться опытом реализации новых проектов, показать свои постановки новой аудитории и, возможно, открыть в них новые смыслы. Надеемся, что жителям Якутска фестиваль принесет не меньше интересных
@@ -389,7 +389,7 @@
     <div class="container-fluid content-4">
         <div class="title-2">
             ГЛАВНЫЙ ПРИЗ – ПОЕЗДКА</br> НА ФЕСТИВАЛЬ
-            <font style="color:#FFCB08;">СОВРЕМЕННОГО ИСКУССТВА «ТЕРРИТОРИЯ. ЯКУТСК»</font>
+            <font style="color:#FAB529;">СОВРЕМЕННОГО ИСКУССТВА «ТЕРРИТОРИЯ. ЯКУТСК»</font>
         </div>
 
         <div class="row">
@@ -399,8 +399,8 @@
         </div>
 
         <div class="row">
-            <div class="col-12 col-sm-6 place">
-                Впервые фестиваль будет проходить в столице самобытной Республики Саха
+            <div class="col-12 col-sm-6 place" style="text-transform: unset;font-family: 's';">
+                Впервые фестиваль будет</br> проходить в столице самобытной</br> Республики Саха
             </div>
             <div class="col-12 col-sm-6">
                 Якутск для проведения фестиваля выбран не случайно. В 2022 году исполняется 100-лет с момента образования Якутской АССР.
@@ -432,7 +432,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="place txt-special-win">
+                    <div class="place txt-special-win" style="text-transform: unset; font-family: 's';">
                         Отдельная номинация для Народных театров и непрофессиональных коллективов
                     </div>
                     <p>
@@ -442,7 +442,7 @@
 
                 <div class="row txt-end">
                     <div class="col align-self-end">
-                        <div class="place">
+                        <div class="place txt-special-win">
                             Цель конкурса
                         </div>
                         Cодействие развитию социальной среды в регионах присутствия «Полюса» за счет поддержки национальной театральной школы, сохранение и распространение посредством театрального искусства общечеловеческих ценностей.
@@ -539,7 +539,7 @@
                 <div class="col-md-9 col-sm-12 ">
                     <div class="row justify-content-between ">
                         <div class="col-auto txt-f ">
-                            <span>Оператор и пресс-офис конкурса</span> </br>+7 495 258-20-45 (доб. 46)
+                            <span>Оператор и пресс-офис конкурса</span> </br>+7 495 258-20-45 (доб. 46)</br>
                         </div>
                         <div class="col-auto txt-f ">
                             <span>Мобильный</span></br> +7 967 130-11-14
@@ -554,10 +554,12 @@
 
                                 </div>
                             </div>
-
                         </div>
                     </div>
-
+                </div>
+                <div class="w-100"></div>
+                <div class="offset-md-3 offset-lg-3 col-auto">
+                    <img src="img/polylog.svg" class="polylog" alt="">
                 </div>
             </div>
         </div>
